Score lines fully functional. Small styling change to scrollbar and background. Also fixed the two to three column tile issue

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -80,6 +80,7 @@ ol {
 }
 
 .sports-title{
+    color: #333333;
     font-size: 1.5rem;
     margin-bottom: .5rem;
 }
@@ -97,13 +98,18 @@ ol {
 } */
 
 .score-background{
-    background-color: green;
+    background-color: #333333;
     border-radius: 3px;
-    padding: 10px;
+    padding: 5px;
     margin: 5px;
     text-align: center;
 }
 
+.score-background p{
+    font-size: .8rem;
+    font-weight: 600;
+}
+
 div .column-spacer{
-    margin: 0px;
+    margin: -5px;
 }
